--- a/gb/19/9/27/n11549768.md
+++ b/gb/19/9/27/n11549768.md
@@ -1,57 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfgt5/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/asdfgt5/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfgt5/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/asdfgt5/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/asdfgt5/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/asdfgt5/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÒéÔ±ÖÊÑ¯Òª³éÇ© ÁÖ·É·«£ºÌ¨ÍåÃñÖ÷²»ÈÝ¼ùÌ¤</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/09/2bdf06d3e77b1aaf01dab1d86623ec3d-600x400.jpg" />
-<h6>Ãñ½øµ³¸±ÃØÊé³¤ÁÖ·É·«ÈÏÎª£¬ÏÞËõÊÐÒéÔ±ÖÊÑ¯Ê±¼ä£¬Õâ²¢²»·ûºÏÃñÖ÷µÄ¾«Éñ¡££¨Ô¬ÊÀ¸Ö£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>è®®å‘˜è´¨è¯¢è¦æŠ½ç­¾ æž—é£žå¸†ï¼šå°æ¹¾æ°‘ä¸»ä¸å®¹è·µè¸</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/2bdf06d3e77b1aaf01dab1d86623ec3d-600x400.jpg" />
+<h6>æ°‘è¿›å…šå‰¯ç§˜ä¹¦é•¿æž—é£žå¸†è®¤ä¸ºï¼Œé™ç¼©å¸‚è®®å‘˜è´¨è¯¢æ—¶é—´ï¼Œè¿™å¹¶ä¸ç¬¦åˆæ°‘ä¸»çš„ç²¾ç¥žã€‚ï¼ˆè¢ä¸–é’¢ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê09ÔÂ27ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÔ¬ÊÀ¸ÖÌ¨ÍåÌ¨±±±¨µ¼£©¸ßÐÛÊÐÒé»áÊ·ÉÏ×îºÚ°µµÄÒ»ÈÕ£¬ÊÐ³¤º«¹úè¤ÒªÇóÓÚÏÂÎç6Ê±30·Ö×¼Ê±ÏÂ°à£¬Òò´ËÇ¿ÖÆ<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E5%B8%82%E8%AE%AE%E5%91%98.md">ÊÐÒéÔ±</a>ÓÃ<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E6%8A%BD%E7%AD%BE.md">³éÇ©</a>µÄ·½Ê½£¬ÖÐÇ©Õß²ÅÓÐ<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E8%B4%A8%E8%AF%A2.md">ÖÊÑ¯</a>µÄ×Ê¸ñ£»¶Ô´Ë£¬Ãñ½øµ³¸±ÃØÊé³¤<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E6%9E%97%E9%A3%9E%E5%B8%86.md">ÁÖ·É·«</a>ÈÏÎª£¬Õâ²¢²»·ûºÏ<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB.md">ÃñÖ÷</a>µÄ¾«Éñ¡£¶ø¶ÔÓÚÂ½ÉúÐ£Ô°±©Á¦ÊÂ¼þ£¬ËûÇ¿µ÷£¬¡°ÔÚÌ¨Íå£¬ÎÒÃÇ²»¶¯ÊÖ¡±¡£</p>
-<p><a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E6%9E%97%E9%A3%9E%E5%B8%86.md">ÁÖ·É·«</a>27ÈÕ±íÊ¾£¬<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB.md">ÃñÖ÷</a>ÊÇÌ¨ÍåµÄºËÐÄ¼ÛÖµ£¬¸ßÐÛÊÐÕþ¸®ÓÃÕâÖÖÊÖ¶ÎÈ¥ÏÞÖÆÒéÔ±¶ÔÊÐÕþ¸®<a href="https://github.com/asdfgt5/djy/blob/master/gb/tag/%E8%B4%A8%E8%AF%A2.md">ÖÊÑ¯</a>µÄÈ¨Á¦£¬Õâ²¢²»·ûºÏÃñÖ÷µÄ¾«Éñ£»Ï£Íûº«¹úè¤ÄÜÔÙ¶à¼ÓË¼Á¿£¬±Ï¾¹ËûÒÑ¾­ÓÐÒ»¶ÎÊ±¼äÃ»ÓÐ×¨ÐÄÔÚÊÐÕþÉÏ£¬Òò´ËÈÃÒéÔ±ÖÊÑ¯µÄ²¿·Ö¾Í¸ü²»ÄÜµ¡Âý¡£ÕâÑùµÄÇé¿ö·Ç³£º±¼û£¬Ì¨ÍåµÄÃñÖ÷ÊÇ·ñÈÝÐí±»ÕâÑù¼ùÌ¤¡¢ÆÆ»µ£¬ËûÏàÐÅÃñÖÚµÄÐÄÖÐ¶¼ÓÐÒ»°Ñ³ß¡£</p>
-<p>¶ø¶ÔÓÚÂ½ÉúÐ£Ô°±©Á¦ÊÂ¼þÆµ´«£¬ÁÖ·É·«Ç¿µ÷£¬Ï£ÍûÂ½ÉúÄÜ¹»×ðÖØ²»Í¬µÄÒâ¼û£¬±Ø¾¹Ì¨ÍåÊÇÒ»¸öÑÔÂÛ×ÔÓÉµÄµØ·½£¬¡°ÔÚÌ¨Íå£¬ÎÒÃÇ²»¶¯ÊÖ¡±£¬ÊÇÓÃÀíÂÛ¡¢ÀíÄî£¬ÓÃÂÛÊöµÄ·½Ê½È¥Ëµ·þ±Ë´Ë£»ÔÚÌ¨Íå£¬ÃñÖÚÒ²²»»áËæÒâÈ¥ÆÆ»µÓë×Ô¼ºÁ¢³¡²»Í¬µÄÈËÒÔÈÎºÎ·½Ê½±í´ïÒâ¼ûµÄ×ÔÓÉ£¬¸ü²»Ï£ÍûÊÇ±±¾©Õþ¸®Í¸¹ý¶ÔÖÐ¹úÑ§ÉúÊ©Ñ¹£¬±ÆÆÈËûÃÇ×ö³öÕâÑùµÄÐÐÎª¡£</p>
-<p>929³ÅÏã¸Û´óÓÎÐÐ¼´½«µÇ³¡£¬È´·¢ÉúÒÉËÆº«·ÛµÄÃñÖÚÑïÑÔÒªÏòÃð»ðÆ÷ÀÖÍÅ¿ªÇ¹¡¢Â½ÉúÐ£Ô°±©Á¦ÊÂ¼þÆµ´«£¬¶ÔÓÚÓÎÐÐµÄ°²È«¿ÖÓÐÒÉÂÇ¡£ÁÖ·É·«Í¸Â¶£¬ÓÐ¹«ÃñÍÅÌåÏòÃñ½øµ³ÖÐÑë±íÊ¾£¬ÒÑ¾­ËÑ¼¯µ½ÓÐ·´¶ÔÊÆÁ¦×¼±¸ÄÖ³¡µÄÇé×Ê£¬Ö÷°ìµ¥Î»Ò²ÓëÖÐÕýÒ»·Ö¾Ö±£³ÖÁªÏµ£¬²¢×Ô×é¾À²ì¶Ó£¬È·±£»î¶¯°²È«½øÐÐ£¬Ïà¹ØÇé¿ö¶¼ÔÚÕÆÎÕÖÐ¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£ºêÅ×÷</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´09æœˆ27æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…è¢ä¸–é’¢å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰é«˜é›„å¸‚è®®ä¼šå²ä¸Šæœ€é»‘æš—çš„ä¸€æ—¥ï¼Œå¸‚é•¿éŸ©å›½ç‘œè¦æ±‚äºŽä¸‹åˆ6æ—¶30åˆ†å‡†æ—¶ä¸‹ç­ï¼Œå› æ­¤å¼ºåˆ¶<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B8%82%E8%AE%AE%E5%91%98.md#1">å¸‚è®®å‘˜</a>ç”¨<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8A%BD%E7%AD%BE.md#1">æŠ½ç­¾</a>çš„æ–¹å¼ï¼Œä¸­ç­¾è€…æ‰æœ‰<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B4%A8%E8%AF%A2.md#1">è´¨è¯¢</a>çš„èµ„æ ¼ï¼›å¯¹æ­¤ï¼Œæ°‘è¿›å…šå‰¯ç§˜ä¹¦é•¿<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9E%97%E9%A3%9E%E5%B8%86.md#1">æž—é£žå¸†</a>è®¤ä¸ºï¼Œè¿™å¹¶ä¸ç¬¦åˆ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB.md#1">æ°‘ä¸»</a>çš„ç²¾ç¥žã€‚è€Œå¯¹äºŽé™†ç”Ÿæ ¡å›­æš´åŠ›äº‹ä»¶ï¼Œä»–å¼ºè°ƒï¼Œâ€œåœ¨å°æ¹¾ï¼Œæˆ‘ä»¬ä¸åŠ¨æ‰‹â€ã€‚</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9E%97%E9%A3%9E%E5%B8%86.md#1">æž—é£žå¸†</a>27æ—¥è¡¨ç¤ºï¼Œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B0%91%E4%B8%BB.md#1">æ°‘ä¸»</a>æ˜¯å°æ¹¾çš„æ ¸å¿ƒä»·å€¼ï¼Œé«˜é›„å¸‚æ”¿åºœç”¨è¿™ç§æ‰‹æ®µåŽ»é™åˆ¶è®®å‘˜å¯¹å¸‚æ”¿åºœ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B4%A8%E8%AF%A2.md#1">è´¨è¯¢</a>çš„æƒåŠ›ï¼Œè¿™å¹¶ä¸ç¬¦åˆæ°‘ä¸»çš„ç²¾ç¥žï¼›å¸Œæœ›éŸ©å›½ç‘œèƒ½å†å¤šåŠ æ€é‡ï¼Œæ¯•ç«Ÿä»–å·²ç»æœ‰ä¸€æ®µæ—¶é—´æ²¡æœ‰ä¸“å¿ƒåœ¨å¸‚æ”¿ä¸Šï¼Œå› æ­¤è®©è®®å‘˜è´¨è¯¢çš„éƒ¨åˆ†å°±æ›´ä¸èƒ½æ€ æ…¢ã€‚è¿™æ ·çš„æƒ…å†µéžå¸¸ç½•è§ï¼Œå°æ¹¾çš„æ°‘ä¸»æ˜¯å¦å®¹è®¸è¢«è¿™æ ·è·µè¸ã€ç ´åï¼Œä»–ç›¸ä¿¡æ°‘ä¼—çš„å¿ƒä¸­éƒ½æœ‰ä¸€æŠŠå°ºã€‚</p>
+<p>è€Œå¯¹äºŽé™†ç”Ÿæ ¡å›­æš´åŠ›äº‹ä»¶é¢‘ä¼ ï¼Œæž—é£žå¸†å¼ºè°ƒï¼Œå¸Œæœ›é™†ç”Ÿèƒ½å¤Ÿå°Šé‡ä¸åŒçš„æ„è§ï¼Œå¿…ç«Ÿå°æ¹¾æ˜¯ä¸€ä¸ªè¨€è®ºè‡ªç”±çš„åœ°æ–¹ï¼Œâ€œåœ¨å°æ¹¾ï¼Œæˆ‘ä»¬ä¸åŠ¨æ‰‹â€ï¼Œæ˜¯ç”¨ç†è®ºã€ç†å¿µï¼Œç”¨è®ºè¿°çš„æ–¹å¼åŽ»è¯´æœå½¼æ­¤ï¼›åœ¨å°æ¹¾ï¼Œæ°‘ä¼—ä¹Ÿä¸ä¼šéšæ„åŽ»ç ´åä¸Žè‡ªå·±ç«‹åœºä¸åŒçš„äººä»¥ä»»ä½•æ–¹å¼è¡¨è¾¾æ„è§çš„è‡ªç”±ï¼Œæ›´ä¸å¸Œæœ›æ˜¯åŒ—äº¬æ”¿åºœé€è¿‡å¯¹ä¸­å›½å­¦ç”Ÿæ–½åŽ‹ï¼Œé€¼è¿«ä»–ä»¬åšå‡ºè¿™æ ·çš„è¡Œä¸ºã€‚</p>
+<p>929æ’‘é¦™æ¸¯å¤§æ¸¸è¡Œå³å°†ç™»åœºï¼Œå´å‘ç”Ÿç–‘ä¼¼éŸ©ç²‰çš„æ°‘ä¼—æ‰¬è¨€è¦å‘ç­ç«å™¨ä¹å›¢å¼€æžªã€é™†ç”Ÿæ ¡å›­æš´åŠ›äº‹ä»¶é¢‘ä¼ ï¼Œå¯¹äºŽæ¸¸è¡Œçš„å®‰å…¨ææœ‰ç–‘è™‘ã€‚æž—é£žå¸†é€éœ²ï¼Œæœ‰å…¬æ°‘å›¢ä½“å‘æ°‘è¿›å…šä¸­å¤®è¡¨ç¤ºï¼Œå·²ç»æœé›†åˆ°æœ‰åå¯¹åŠ¿åŠ›å‡†å¤‡é—¹åœºçš„æƒ…èµ„ï¼Œä¸»åŠžå•ä½ä¹Ÿä¸Žä¸­æ­£ä¸€åˆ†å±€ä¿æŒè”ç³»ï¼Œå¹¶è‡ªç»„çº å¯Ÿé˜Ÿï¼Œç¡®ä¿æ´»åŠ¨å®‰å…¨è¿›è¡Œï¼Œç›¸å…³æƒ…å†µéƒ½åœ¨æŽŒæ¡ä¸­ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ˜±ä½œ</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/9/27/n11549768.htm">ÒéÔ±ÖÊÑ¯Òª³éÇ© ÁÖ·É·«£ºÌ¨ÍåÃñÖ÷²»ÈÝ¼ùÌ¤</a>
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11547818.htm">Ì¨Á¬Ù¯Ç½ÔâÂ½ÉúÆÆ»µ ÁÖ·É·«£ºÓõ±±¾©ÎðÊ©Ñ¹Á¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/30/n11488237.htm">»ÆÖ®·æµÈÈËÔâ²¶ ÁÖ·É·«ÌáÈý²»ÒªÓõÖÐ¹²Õ¹¿ª¶Ô»°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/23/n11471781.htm">º«¹úè¤Å×ÖØÆôºËËÄ ÁÖ·É·«Ö¸À¶ÓªÎóµ¼ÃñÖÚ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/12/n11448106.htm">¸Û¾¯ÕòÑ¹·´ËÍÖÐ Ãñ½øµ³£ºÎðºöÊÓÊÀ½ç¶Ô¸ÛÃñµÄÖ§³Ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393008.htm">¶Ô¿¹º«Á÷ ÁÖ·É·«£ºÌ¨ÍåÐë´òÔì·Çº«¼ÒÔ°</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11546931.htm">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²È±Ç® Óû¶áÈ¡¸»ºÀ²Æ²ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11548856.htm">¡¾ÐÂÎÅ¿´µã¡¿Ê®Ò»ÖÁ ±±¾©ÊÇ´óÇì»¹ÊÇ´óÄÑ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11549060.htm">´¨ÆÕÓõ²é°ÝµÇ¸¸×Ó ÉÏº£ÉñÃØ¹«Ë¾ËÙÉ¾ºàÌØ×ÊÁÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11548966.htm">Î¢²©´óV´«Òò³°·í¸¶¹úºÀ ±»ÐÌ¾Ð37Ìì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/9/3/n4519621.htm">½ñÉúÔâÍ¬ÁÅÅÅ¼· Ô­À´ÊÇÆß°ÙÄêÇ°Ç·µÄÕ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/20/n11534314.htm">ÌÆ³¯ÊéÉúÂÅÊÔ²»ÖÐ ¸ßÉ®¸æÖªËÄ´óÌõ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/7/1/n8056353.htm">¡¾ÎÄÊ·¡¿ÔÆÖÐ¹¬¹ÛÏÖÎäµ± Ã÷³É×æÔìÈË¼äÏÉ¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539138.htm">ÒÔÖÇ»ÛÏÍµÂÓ®µÃ×ðÖØµÄÃÀÈË·®¼§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11548571.htm">¼ÓÄÃ´ó·¿ÊÐÉýÎÂ ºÀÕ¬ÐèÇóÈÔÇ¿¾¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/21/n11537362.htm">ËýµÄ°×Ñª²¡¼¸ÖÜÏûÊ§ ÕâÖÖÐ×ÃÍ°×Ñª²¡ÈçºÎ¶Ô¿¹£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11549564.htm">³µÆÀ£ºCCÓëA7µÄ»ìºÏÌå 2019 Volkswagen Arteon</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11549752.htm">ÕÂÓãÔÚË¯¾õÊ±ÉíÌåÑ¸ËÙ±äÉ« ×¨¼Ò£ºËüÔÚ×öÃÎ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11549806.htm">Ê®¸öÓ°Ïì¶þÊÖ³µ¼Û¸ñµÄÒòËØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11547040.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ïã¸ÛÖ®¸è³öÊÖÓï°æ£¡¸ÛÈË°ÙÈÕÐûÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/27/n11549383.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ê×³¡¶Ô»°»á ÁÖÖ£±Ü´ð¼âÈñÎÊÌâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11541603.htm">¡¾ÐÂÎÅ¿´µã¡¿Õæ¼Ù¼ÇÕß£¿¸¶¹úºÀ»ñ½±10ÍòÔÙÈÇÒÉ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11546708.htm">ÇàµºÄÐ×ÓÓÃ·½±ãÃæÐÞiPhone11 Õð¾ªÀÏÍâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11545125.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºÖÐ¹²ÔÚÏã¸ÛÉÏÑÝ×îºó·è¿ñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11546501.htm">ÐÂ½®Ä£Ê½À©´ó ¹«°²²¿È«¹ú²É¼¯ÄÐÐÔDNA</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11544222.htm">µÇÈðÊ¿¹ó×åÑ§Ð£¹ÙÍø 13ËêÀîæÌÐ£Ô°Éú»îÆØ¹â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11544375.htm">Íõ±¦Ç¿ÏçÏÂºÀÕ¬ÔâÍ¿Ñ» ´óÃÅÓÍÆáÑÕÉ«ÒýÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11545153.htm">±»ÅÄµ½ÓëÕÅ¾ûå¸Ô¼»á ÇñÔóËÉ¿Ú£ºÅ¬Á¦×·ÇóÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11545320.htm">¸è×ÐÏ·µÇÈÈËÑ°ñ ÑîÀö»¨ÑûÀÏÏôÓëA-LinÏ×Éù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/26/n11547898.htm">²ÌÊ«Ü¿»³ÔÐÁË£¡ÓëÍõÑôÃ÷ÌðÉ¹ÔÐÕÕ ·ÖÏíÏ²ÔÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/9/3/n4519621.htm">½ñÉúÔâÍ¬ÁÅÅÅ¼· Ô­À´ÊÇÆß°ÙÄêÇ°Ç·µÄÕ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/20/n11534314.htm">ÌÆ³¯ÊéÉúÂÅÊÔ²»ÖÐ ¸ßÉ®¸æÖªËÄ´óÌõ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/7/1/n8056353.htm">¡¾ÎÄÊ·¡¿ÔÆÖÐ¹¬¹ÛÏÖÎäµ± Ã÷³É×æÔìÈË¼äÏÉ¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/13/n11519193.htm">¸ÛÈËÕùÃñÖ÷ »ÆÖ®·æÅÎÖÐ¹úÈËÒ²ÏíÓÐÃñÖ÷×ÔÓÉ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/22/n11539138.htm">ÒÔÖÇ»ÛÏÍµÂÓ®µÃ×ðÖØµÄÃÀÈË·®¼§</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/9/26/n11547818.md#1">å°è¿žä¾¬å¢™é­é™†ç”Ÿç ´å æž—é£žå¸†ï¼šååŒ—äº¬å‹¿æ–½åŽ‹åŠ›</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/30/n11488237.md#1">é»„ä¹‹é”‹ç­‰äººé­æ• æž—é£žå¸†æä¸‰ä¸è¦åä¸­å…±å±•å¼€å¯¹è¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/23/n11471781.md#1">éŸ©å›½ç‘œæŠ›é‡å¯æ ¸å›› æž—é£žå¸†æŒ‡è“è¥è¯¯å¯¼æ°‘ä¼—</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/12/n11448106.md#1">æ¸¯è­¦é•‡åŽ‹åé€ä¸­ æ°‘è¿›å…šï¼šå‹¿å¿½è§†ä¸–ç•Œå¯¹æ¸¯æ°‘çš„æ”¯æŒ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/7/18/n11393008.md#1">å¯¹æŠ—éŸ©æµ æž—é£žå¸†ï¼šå°æ¹¾é¡»æ‰“é€ éžéŸ©å®¶å›­</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfgt5/djy/blob/master/gb/19/9/27/n11549768.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/asdfgt5/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/asdfgt5/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/asdfgt5/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/asdfgt5/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/asdfgt5/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">åˆ˜æ™“ï¼šè¢«ä¸­å…±æ‰“é€ çš„â€œé©å‘½æ¯äº²â€æ¨æ²«</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">æŽæ´ªå¿—å…ˆç”Ÿä¼ æ³•15å¹´é‡è¦å²å®žåŠè¾‰ç…ŒåŽ†ç¨‹</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">ä¸­å…±å‘è¨€äººèµ–ç¾Žå†›å¸¦ç–«æƒ…åˆ°æ­¦æ±‰ å›½é™…å“—ç„¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">é™ˆæ—¶ä¸­ï¼šä¸­å…±è°ˆç–«æƒ…æ²¡äººä¿¡ WHOä»€ä¹ˆéƒ½ä¸è¯´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">ç¾Žå›½CDCæ‰¿è®¤äº†ä»€ä¹ˆï¼Ÿä¸­å…±å†é€ å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">ã€æ–‡å²ã€‘ä¸ºä¸€åœºåœ°éœ‡ å†¥ç•Œç­¹å¤‡äº†50å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">çš‡ä¸Šå¯¹è—è™«è¯´äº†ä¸€å¥è¯ æ¼«å¤©è—ç¾å½»åº•æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">ä¼ é’Ÿå—å±±è¢«å…èŒ ä¸“å®¶ç»„ç»„é•¿æ‚„æ‚„æ¢äººå†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å‘å“¨äººå¼•çˆ†èˆ†æƒ… ä¹ è®¿æ­¦æ±‰ å®˜å®£ç ´äº§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">å­æ„Ÿé«˜ä»·èœå¼•çˆ†å¤§è§„æ¨¡æŠ—è®® å¸‚æ°‘æ€’å–Šâ€œä¸‹è¯¾â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç”©é”…ç¾Žå†› ä¸­å…±å¤–äº¤éƒ¨æ¼”åŒç°§ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘è…Šå‘³ç‚’è·å…°è±†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">çˆ¶æ¯æŸ“ç–«åŽ»ä¸– æ­¦æ±‰é’å±±åŒºçˆ†å­¤å„¿éš”ç¦»ç‚¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">ä¸–å«æ”¹æ­¦æ±‰è‚ºç‚Žåç§° é»„ç§‹ç”Ÿæ–¥è´£èŽ·ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">â€œå¥³ç‰ˆé»„å®‰â€åˆ˜ä¹å¦è¿”å°ä½é™¢ç”¨å¥ä¿ ç½‘å‹ç‚®è½°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">ä¼ ä¸­å…±å¹¿ç”µå±€ä¸‹é™ç±ä»¤ åˆ˜äº¦è²å´äº¦å‡¡æˆ–å—å½±å“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">æ„å¤§åˆ©ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼Ÿæ„è£”å°æ¹¾ç”·æ˜ŸæžåŽŸå› </a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">å´äº¦å‡¡ä»ŽåŠ å›½å›žä¸­å›½å¤å·¥ ä¸€æŠµè¾¾ä¾¿è¢«å¸¦èµ°éš”ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/9/27/n11549768.htm">è®®å‘˜è´¨è¯¢è¦æŠ½ç­¾ æž—é£žå¸†ï¼šå°æ¹¾æ°‘ä¸»ä¸å®¹è·µè¸</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/9/27/n11549768.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
